# webSummaryService

./: LICENSE  README.md
app/: Dockerfile  app.py  model.py  model_test.py  pyproject.toml  requirements.txt
app/static/pico-master/css/: styles.css
app/templates/: about.html  contacted.html  formulaire.html  index.html  model.html
monitoring/: Dockerfile  README.md  pyproject.toml  requirements.txt
monitoring/monitoring/: dashboard.py
stack/: docker-compose.yml
