[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = ""
authors = ["Mathieu GUIGNET <mathieu.guignet@le-campus-numerique.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.3"
streamlit = "^1.10.0"
SQLAlchemy = "^1.4.39"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
